--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
         </section>
     </div>
 
+    <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-firestore-compat.js"></script>
+
     <script src="js/script.js"></script>
 </body>
 </html>
